[gd_scene load_steps=2 format=3 uid="uid://d3gvylhn4oarn"]

[ext_resource type="Script" path="res://game_manager.gd" id="1_2do8p"]

[node name="GameManager" type="Node2D"]
script = ExtResource("1_2do8p")

[node name="MoveTimer" type="Timer" parent="."]
editor_description = "How fast the pieces move. Increases as level increases"

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
